# Bootcamppy

./: README.md
One-Billion-Row-aula05/: pyproject.toml
One-Billion-Row-aula05/src/: create_measurements.py  using_dask.py  using_duckdb.py  using_pandas.py  using_polars.py  using_python.py  using_python_old.py
aula03_bootpy/: README.md  ex1.py  ex10.py  ex11.py  ex13.py  ex14.py  ex15.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex9.py
aula04_bootpy/: ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  lista_ordenacao.py  main.py  readme.md
aula06/: pyproject.toml
aula16_bootpy/: README.md  database.db  pyproject.toml
aula1_bootpy/: desafio1.py  erros.md  exemplo_00.py  readme.md
aula2_bootpy/: README.md  exercicio1.py  exercicio10.py  exercicio11.py  exercicio12.py  exercicio14.py  exercicio15.py  exercicio16.py  exercicio17.py  exercicio18.py  exercicio19.py  exercicio2.py  exercicio20.py  exercicio22.py  exercicio3.py  exercicio4.py  exercicio5.py  exercicio6.py  exercicio7.py  exercicio8.py  exercicio9.py
